Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO4uvyNa1Y2TJ2NB9tY+JV6",
+      "authorship_tag": "ABX9TyMg9LaDXOWtbghHEO8ZNdas",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +43,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -90,7 +89,7 @@
         "# シェルでコマンドラインワンライナーを実行する\n",
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +152,7 @@
         "id": "TcOoDsD5V736",
         "outputId": "f24f8ce9-ad88-441c-d94b-624be3470252"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -233,7 +232,7 @@
         "id": "KsHYgPehoK7l",
         "outputId": "69dff497-e1b4-45dc-9656-6be25bab43ec"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +261,7 @@
         "!echo\n",
         "!echo -e 'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  mapM_ putStrLn . map reverse.lines\""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +346,7 @@
         "!echo\n",
         "!echo -e 'this is a pen\\nabcdef\\n12345' | ghc -e 'getContents>>= mapM_ putStrLn.map reverse.words'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +385,7 @@
         },
         "outputId": "89ed88b8-5f5c-4385-ada5-96ebec7a38c3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +414,7 @@
         "  print \"Haskell\\nand\\nPython\"  \n",
         "  putStrLn \"Haskell\\nand\\nPython\"  "
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +437,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +520,7 @@
         "id": "rVwljePQZ4RC",
         "outputId": "d53cfbed-9a26-4ef9-a003-7c34700167db"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +560,7 @@
         "  let fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "  in print ( fac 42 )"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +583,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +661,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +684,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +708,7 @@
         "# コマンドラインワンライナーにする場合は let in とする必要がある\n",
         "!ghc -e \"let fac n = if n == 0 then 1 else n * fac (n-1) in print ( fac 42 )\""
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +736,7 @@
         "fac n = n * fac (n-1)  \n",
         "main = print (fac 42)  "
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +759,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +783,7 @@
         "# パターンマッチングでコマンドラインワンライナー\n",
         "!ghc -e $'let {fac 0 = 1 ; fac n = n * fac (n-1);} in print (fac 42)'"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,7 +812,7 @@
         "\n",
         "main = print (fac 5)  "
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -836,7 +835,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,7 +859,7 @@
         "# case をコマンドラインワンライナーで使えるか\n",
         "!ghc -e 'let {fac n = case n of 0 -> 1; _ -> n * fac (n-1)} in print (fac 7)'"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +883,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +912,7 @@
         "  print $ (1-5)^(3*2 - 4)\n",
         "  print $ 5 / 2"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +935,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,7 +965,7 @@
         "!ghc -e '(1-5)^(3*2 - 4)'\n",
         "!ghc -e '5 / 2'"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -993,7 +992,7 @@
         },
         "outputId": "fc15d6d5-0774-4f3b-e1af-df2d2c1f05ee"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,7 +1031,7 @@
         "  print \"Hello\"\n",
         "  print $ \"hello\" ++ \", haskell\""
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,7 +1054,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1086,7 @@
         "    print $ not (5 < 3)\n",
         "    print $ gcd 21 14"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,7 +1109,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1139,7 +1138,7 @@
         "# 実験 floor が使えるかどうか\n",
         "!ghc -e 'floor(-6.59)' #=> -7"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,7 +1164,7 @@
         "!ghc -e 'do {putStr \"2 + 2 = \"; print(2 + 2)}'\n",
         "!ghc -e 'do { putStrLn \"ABCDE\" ; putStrLn \"12345\" }  '"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,7 +1206,7 @@
         "# map 関数とラムダ式(無名関数)\n",
         "!ghc -e 'map (\\x ->  x^2) [1..3]'"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1233,7 +1232,7 @@
         "!echo\n",
         "!ghc -e 'mapM_ print [1..3]' # 結果のリストを返さないバージョン"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1270,7 +1269,7 @@
         "!echo -e 'this\\nis' | ghc -e 'getContents >>= print . lines'\n",
         "!echo 'this\\nis' | ghc -e 'getContents >>= print . lines'"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,7 +1307,7 @@
         "!echo -e 'this\\nis' | ghc -e 'do {x <- getContents ; mapM_ print (lines(x))}'\n",
         "!echo -e 'this\\nis' | ghc -e 'do {x <- getContents ; mapM_ putStrLn (lines(x))}'"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1350,7 +1349,7 @@
         "!ghc -e ':k Traversable'\n",
         "!ghc -e ':k Foldable'"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1371,25 +1370,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "5H5rqoA82iVU"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "Da88msUHo10X",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e84de46e-7b41-4dc3-c66f-2715ba1ceaad"
+        "id": "Da88msUHo10X"
       },
       "source": [
-        "# 実験\n",
+        "# 実験 アプリカティブとかファンクターとか\n",
+        "# 今はわからないのでとりあえず少し実験して先へ進む\n",
         "!ghc -e ':t (<*>)' # Applicative\n",
         "!ghc -e ':t (<$>)' # functor\n",
         "!ghc -e ':k Applicative'\n",
@@ -1398,40 +1385,37 @@
         "!ghc -e ':t (<<=)'\n",
         "!ghc -e ':t (<-)'"
       ],
-      "execution_count": 69,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FfBgDIpqUvIJ",
+        "outputId": "f85b67ca-b546-4eca-b237-766a3241c180",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo -e 'John\\nMike' | ghc -e 'interact $ unlines . map (\"hello \" ++) . lines'\n",
+        "!echo\n",
+        "!echo -e 'John\\nMike' | ghc -e 'getContents >>= putStr.unlines.map (\"hello \" ++).lines'"
+      ],
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(<*>) :: Applicative f => f (a -> b) -> f a -> f b\n",
-            "(<$>) :: Functor f => (a -> b) -> f a -> f b\n",
-            "Applicative :: (* -> *) -> Constraint\n",
-            "Functor :: (* -> *) -> Constraint\n",
+            "hello John\n",
+            "hello Mike\n",
             "\n",
-            "<interactive>:1:1: error:\n",
-            "    • Variable not in scope: <<=\n",
-            "    • Perhaps you meant ‘<=’ (imported from Prelude)\n",
-            "\n",
-            "<interactive>:1:2: error:\n",
-            "    parse error on input ‘<-’\n",
-            "    Perhaps this statement should be within a 'do' block?\n"
+            "hello John\n",
+            "hello Mike\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FfBgDIpqUvIJ"
-      },
-      "source": [
-        "!echo -e 'John\\nMike' | ghc -e 'interact $ unlines . map (\"hello \" ++) . lines'\n",
-        "!echo\n",
-        "!echo -e 'John\\nMike' | ghc -e 'interact $ unlines.map (\"hello \" ++).lines'"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1446,6 +1430,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "5H5rqoA82iVU"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3298,7 +3291,7 @@
         "!ghc -e 'product [6,2,1,2]  '\n",
         "!ghc -e 'product [1,2,5,6,7,9,2,0]  '"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
