Colaboratory を使用して作成しました

--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_lipovaca.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPFGdht4HbhRkW94s6seuUk",
+      "authorship_tag": "ABX9TyOgeTZdVWJeS5InlpcK0Z1E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1170,10 +1170,10 @@
       ],
       "metadata": {
         "id": "O3S5cL5Q7x8p",
-        "outputId": "a62cef6c-e470-415e-dd79-ed47d74c138b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a62cef6c-e470-415e-dd79-ed47d74c138b"
       },
       "execution_count": 50,
       "outputs": [
@@ -1196,11 +1196,11 @@
         "!ghc -e 'take 12 (cycle \"LOL \")'"
       ],
       "metadata": {
-        "id": "SDkmxahDKJjS",
-        "outputId": "aa80607c-897a-4cd1-d75e-2636ae628df3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SDkmxahDKJjS",
+        "outputId": "aa80607c-897a-4cd1-d75e-2636ae628df3"
       },
       "execution_count": 52,
       "outputs": [
@@ -1225,11 +1225,11 @@
         "!ghc -e 'replicate 3 \"LOL\"'"
       ],
       "metadata": {
-        "id": "sCWuQVnELloi",
-        "outputId": "704aeaad-52ce-4e18-a14b-d0946ee3c3bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sCWuQVnELloi",
+        "outputId": "704aeaad-52ce-4e18-a14b-d0946ee3c3bd"
       },
       "execution_count": 57,
       "outputs": [
@@ -1255,10 +1255,37 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        " $ S=\\{2 \\centerdot x | x \\in \\mathbb{N}, x \\le 10 \\}$"
+      ],
+      "metadata": {
+        "id": "caViNeJrOpNx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 内包表記 list comprehension\n",
-        "\n"
+        "# 数学で集合を習った時に次のような\n",
+        "あなたが今までに取ったことがあれば\n",
+        "数学のコースでは、おそらく*セットの理解*に遭遇したことがあります。\n",
+        "それらは通常、一般的なものからより具体的なセットを構築するために使用されます\n",
+        "セット。最初の10個を含むセットの基本的な理解\n",
+        "自然数は$S= \\ {2 \\ centerdot x | x \\ in \\ mathbb {N}、x \\ le 10\\}$。前の部分\n",
+        "パイプは出力関数と呼ばれ、 `x`は変数、`N`は\n",
+        "入力セットと`x<=10`が述語です。つまり、セット\n",
+        "述語を満たすすべての自然数の倍精度が含まれます。\n",
+        "\n",
+        "Haskellでそれを書きたいのなら、`takeのようなことをすることができます\n",
+        "10 [2,4..]`。しかし、最初の10個のナチュラルの2倍が必要ない場合はどうなりますか\n",
+        "数字ですが、ある種のより複雑な関数がそれらに適用されていますか？我々は出来た\n",
+        "そのためにリスト内包を使用してください。リスト内包表記は非常に似ています\n",
+        "理解度を設定します。最初の10個の偶数を取得することに固執します\n",
+        "今のところ。使用できるリスト内包表記は`[x* 2 | x<-[1..10]]`。\n",
+        "`x`は`[1..10]`から引き出され、`[1..10]`のすべての要素に対して（\n",
+        "`x`にバインドされている場合、その要素を取得しますが、2倍になります。これが\n",
+        "実行中の理解。\n"
       ],
       "metadata": {
         "id": "hrd1q5xiMO2z"
@@ -1276,7 +1303,11 @@
         "course in mathematics, you've probably run into *set comprehensions*.\n",
         "They're normally used for building more specific sets out of general\n",
         "sets. A basic comprehension for a set that contains the first ten even\n",
-        "natural numbers is $ S=\\{2 \\centerdot x | x \\in \\mathbb{N}, x \\le 10 \\}$. The part before\n",
+        "natural numbers is\n",
+        "\n",
+        " $ S=\\{2 \\centerdot x | x \\in \\mathbb{N}, x \\le 10 \\}$\n",
+        " \n",
+        " . The part before\n",
         "the pipe is called the output function, `x` is the variable, `N` is the\n",
         "input set and `x <= 10` is the predicate. That means that the set\n",
         "contains the doubles of all natural numbers that satisfy the predicate.\n",
