Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -1156,7 +1156,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1182,7 +1182,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7129,10 +7129,36 @@
         "</table>"
       ],
       "metadata": {
-        "id": "1tR6_yoBzqeT"
+        "id": "1tR6_yoBzqeT",
+        "outputId": "7c3479ef-f74d-47c3-d30a-80dd022191cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>STLの関数 </th><th> 計算量(配列の要素数N)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>sort </td><td> O(NlogN)</td></tr>\n",
+              "<tr><td>reverse </td><td> O(N)</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
