Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM95QgfcogToOvTudDzGueM",
+      "authorship_tag": "ABX9TyOJU1WZlbOlkCegFWyJEVeL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,76 @@
     {
       "cell_type": "code",
       "source": [
+        "# tail recursion 末尾再帰\n",
+        "# fact :: Int -> Int\n",
+        "# fact n = fact' n 1\n",
+        "#     where\n",
+        "#         fact' 0 y = y\n",
+        "#         fact' x y = fact' (x - 1) (x * y)\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "unsigned long  fact02 (unsigned long  n, unsigned long  acc){\n",
+        "    if (n==0) return acc;\n",
+        "    else {\n",
+        "        return fact02((n-1), n*acc);\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "unsigned long  fact (unsigned long  n) {\n",
+        "    return fact02(n, 1);\n",
+        "}\n",
+        "\n",
+        "int main () {\n",
+        "    unsigned long  n; cin >> n;\n",
+        "    cout << fact (n) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "CXzzJSRighS9",
+        "outputId": "db77aa83-f288-47bc-d1a2-10449f8646c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 50 |./a.out"
+      ],
+      "metadata": {
+        "id": "JNCR-rerhyE7",
+        "outputId": "943a1d73-0eac-47a0-b2f6-e7b1f62fcc58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15188249005818642432\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# heredocument\n",
         "# 隣接する文字列の連結を利用した方法\n",
         "%%writefile temp.cpp\n",
@@ -63,7 +133,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +194,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +217,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
