--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPx0r3ndbUZFrJJQiEZfP9F",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMQGDv6T/qSce+n3a8Lb8LZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5618,7 +5619,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5641,7 +5642,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5655,15 +5656,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "q245x4YuP1kI"
-      }
     },
     {
       "cell_type": "code",
@@ -5748,7 +5740,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5771,7 +5763,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5783,9 +5775,73 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "q245x4YuP1kI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        ""
+        "# わからないので実験\n",
+        "# APG4b 2.05.再帰関数 例題 from APG4b\n",
+        "# 報告書の伝達時間\n",
+        "# 入力例 6 0 0 1 1 4 #=> 3\n",
+        "# この入力例では、組織は次のような関係になっています。\n",
+        "# 1番の組織の親組織は0番\n",
+        "# 2番の組織の親組織は0番\n",
+        "# 3番の組織の親組織は1番\n",
+        "# 4番の組織の親組織は1番\n",
+        "# 5番の組織の親組織は4番\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "// x番の組織について、子組織からの報告書が揃った時刻を返す\n",
+        "// childrenは組織の関係を表す2次元配列(参照渡し)\n",
+        "int complete_time(vector<vector<int>> &children, int x) {\n",
+        "  // (ここに追記して再帰関数を実装する)\n",
+        "  // ベースケース\n",
+        "  if (children.at(x).size() == 0) {\n",
+        "    return 0;  // 子組織が無いような組織について、報告書が揃う時刻は0\n",
+        "  }\n",
+        " \n",
+        "  // 再帰ステップ\n",
+        "  int max_receive_time = 0;  // 受け取った時刻の最大値\n",
+        "  // x番の組織の子組織についてループ\n",
+        "  for (int c : children.at(x)) {\n",
+        " \n",
+        "    // (子組織 c のもとに揃った時刻 + 1) の時刻に c からの報告書を受け取る\n",
+        "    int receive_time = complete_time(children, c) + 1;\n",
+        " \n",
+        "    // 受け取った時刻の最大値 = 揃った時刻 なので最大値を求める\n",
+        "    max_receive_time = max(max_receive_time, receive_time);\n",
+        "  }\n",
+        "  return max_receive_time;\n",
+        "}\n",
+        " \n",
+        "int main() {\n",
+        "  int N; cin >> N;\n",
+        " \n",
+        "  vector<int> p(N);  // 各組織の親組織を示す配列\n",
+        "  p.at(0) = -1;  // 0番組織の親組織は存在しないので-1\n",
+        "  for (int i = 1; i < N; i++) {\n",
+        "    cin >> p.at(i);\n",
+        "  }\n",
+        " \n",
+        "  // 組織の関係から2次元配列を作る\n",
+        "  vector<vector<int>> children(N);  // ある組織の子組織の番号一覧  // N×0の二次元配列\n",
+        "  for (int i = 1; i < N; i++) {\n",
+        "    int parent = p.at(i);  // i番の親組織の番号\n",
+        "    children.at(parent).push_back(i);  // parentの子組織一覧にi番を追加\n",
+        "  }\n",
+        " \n",
+        "  // 0番の組織の元に報告書が揃う時刻を求める\n",
+        "  cout << complete_time(children, 0) << endl; #=> 3\n",
+        "}"
       ],
       "metadata": {
         "id": "sGkgaKSjYZ8j"
@@ -12965,17 +13021,6 @@
       ],
       "metadata": {
         "id": "Fg6qTn1KeXbo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Wj3qvUdZ6MdU"
       },
       "execution_count": null,
       "outputs": []
