Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "authorship_tag": "ABX9TyNA38saCC9vuoPQCFbADYwh",
       "include_colab_link": true
     },
@@ -825,7 +824,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +847,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12055,10 +12054,22 @@
         "}"
       ],
       "metadata": {
-        "id": "5xpXXrjzk6p2"
+        "id": "5xpXXrjzk6p2",
+        "outputId": "d266b996-515f-4af7-cb4a-5a03000d91d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -12066,10 +12077,29 @@
         "!g++ temp.cpp; ./a.out "
       ],
       "metadata": {
-        "id": "IsmmEXL2RJHt"
+        "id": "IsmmEXL2RJHt",
+        "outputId": "50b7d63b-2222-4b2a-d35d-9d68013a59e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "000\n",
+            "001\n",
+            "010\n",
+            "011\n",
+            "100\n",
+            "101\n",
+            "110\n",
+            "111\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -12096,10 +12126,33 @@
         "</table>"
       ],
       "metadata": {
-        "id": "OVysB-ZaRDo5"
+        "id": "OVysB-ZaRDo5",
+        "outputId": "94739f7b-a5e9-4589-d6fc-044ff580b31d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\">\n",
+              "<tbody>\n",
+              "<tr><td>十進数</td><td>0</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>\n",
+              "<tr><td>二進数</td><td>000</td><td>001</td><td>010</td><td>011</td><td>100</td><td>101</td><td>110</td><td>111</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
