--- a/cpp_aribon.ipynb
+++ b/cpp_aribon.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aribon.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP6BwQFRrYABo64JrWzZ8yn",
+      "authorship_tag": "ABX9TyPpkyENLVgI0u/YWAr3H45G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,8 +76,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# 次ページの解法例は for ループを 4 回回している\n",
-        "# なぜ 4 回回しているか？ 取り出して戻すが 4 回だからか？\n"
+        "# 本の解法例は for ループを 4 回回している。\n",
+        "# なぜ 4 回回しているか？ => 4 回の和が m だから\n",
+        "# 再帰で解くのが頭の使い方としては簡単ではないか => トライしてみたが考えつかなかった\n",
+        "# bit演算で全探索で解くのが頭の使い方としては単純ではないか => トライしてみたがうまく行かなかった\n",
+        "# その前に問題の書き方はこれでよいか。あとで読んで分かるか。"
       ],
       "metadata": {
         "id": "xCWQ8spY1gTL"
@@ -88,15 +91,167 @@
     {
       "cell_type": "code",
       "source": [
+        "# for ループでとりあえず解いてみる 本の解法をなぞった\n",
+        "# 問題 p.8 くじびき\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "int main () {}\n",
-        "!g++ temp.cpp; ./a.out\n",
-        "!g++ temp.cpp; echo    |./a.out"
+        "int main () {\n",
+        "    int n, m;\n",
+        "    cin >> n >> m;\n",
+        "    vector<int> vec(n);\n",
+        "    for (int i=0; i < n ; i++) {\n",
+        "        cin >> vec.at(i);\n",
+        "    }\n",
+        "    bool ans = false;\n",
+        "    \n",
+        "    for (int i=0; i < n ; i++) {\n",
+        "        for (int j=0; j < n ; j++) {\n",
+        "            for (int k=0; k < n ; k++){\n",
+        "                for (int l=0; l < n ; l++){\n",
+        "                    if (vec.at(i)+vec.at(j)+vec.at(k)+vec.at(l) == m) ans = true;\n",
+        "                }\n",
+        "            }\n",
+        "        }\n",
+        "    }\n",
+        "    if (ans) cout << \"Yes\" << endl;\n",
+        "    else cout << \"No\" << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "fOw9ygDZ1Wyx"
+        "id": "fOw9ygDZ1Wyx",
+        "outputId": "82d0f3cd-7662-48bd-de2e-2e6872d2e325",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 10 1 3 5 |./a.out #=> Yes 1 1 3 5\n",
+        "!g++ temp.cpp; echo 3 9 1 3 5 |./a.out #=> No \n",
+        "!g++ temp.cpp; echo 3 9 1 3 2 |./a.out #=> Yes 3 3 2 2"
+      ],
+      "metadata": {
+        "id": "21oxtk6R3RHF",
+        "outputId": "a5b3aa4f-15b2-4167-fb8b-386507596970",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n",
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 p.21 三角形\n",
+        "# n 本の棒がある\n",
+        "# そこから 3 本を選んでできるだけ周長の長い三角形を作る\n",
+        "# 周長を求める。三角形が作れない場合は 0 を答えとする\n",
+        "# 3 <= n <= 100, 1 <= a_i <= 10^6\n",
+        "# 入力 5 2 3 4 5 10 => 12 (3,4,5 を選ぶ)\n",
+        "# 入力 4 4 5 10 20 => 0"
+      ],
+      "metadata": {
+        "id": "PGsHUtRG5zHM",
+        "outputId": "8dc9f438-17ed-4556-80e2-a0820a0ddf30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "07Tmi0phYCUX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 p.21 三角形\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    int n;\n",
+        "    cin >> n;\n",
+        "    vector<int> vec(n);\n",
+        "    for (int i=0;i < n; i++){\n",
+        "        cin >> vec.at(i);\n",
+        "    }\n",
+        "    for (int i=0; i < n; i++){\n",
+        "        for (int j=0; j < n; j++){\n",
+        "            for (int k=0; k < n; k++){\n",
+        "                if \n",
+        "            }\n",
+        "        }\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Mw_tn12T9m5G",
+        "outputId": "2e24fd3f-6275-4103-c74b-2f841d568ea9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0111\n",
+            "1111\n",
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "bsv8d2_s9pmF"
       },
       "execution_count": null,
       "outputs": []
