--- a/cpp_aribon.ipynb
+++ b/cpp_aribon.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aribon.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpkyENLVgI0u/YWAr3H45G",
+      "authorship_tag": "ABX9TyOsLVB/L0GYZDRpoy96uPmr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,10 +120,10 @@
       ],
       "metadata": {
         "id": "fOw9ygDZ1Wyx",
-        "outputId": "82d0f3cd-7662-48bd-de2e-2e6872d2e325",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "82d0f3cd-7662-48bd-de2e-2e6872d2e325"
       },
       "execution_count": 42,
       "outputs": [
@@ -144,11 +144,11 @@
         "!g++ temp.cpp; echo 3 9 1 3 2 |./a.out #=> Yes 3 3 2 2"
       ],
       "metadata": {
-        "id": "21oxtk6R3RHF",
-        "outputId": "a5b3aa4f-15b2-4167-fb8b-386507596970",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "21oxtk6R3RHF",
+        "outputId": "a5b3aa4f-15b2-4167-fb8b-386507596970"
       },
       "execution_count": 46,
       "outputs": [
@@ -175,11 +175,11 @@
         "# 入力 4 4 5 10 20 => 0"
       ],
       "metadata": {
-        "id": "PGsHUtRG5zHM",
-        "outputId": "8dc9f438-17ed-4556-80e2-a0820a0ddf30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PGsHUtRG5zHM",
+        "outputId": "8dc9f438-17ed-4556-80e2-a0820a0ddf30"
       },
       "execution_count": 39,
       "outputs": [
@@ -216,31 +216,36 @@
         "    for (int i=0;i < n; i++){\n",
         "        cin >> vec.at(i);\n",
         "    }\n",
+        "    int ans = 0; \n",
         "    for (int i=0; i < n; i++){\n",
-        "        for (int j=0; j < n; j++){\n",
-        "            for (int k=0; k < n; k++){\n",
-        "                if \n",
+        "        for (int j=i+1; j < n; j++){\n",
+        "            for (int k=j+1; k < n; k++){\n",
+        "                int len = vec.at(i) + vec.at(j) + vec.at(k);\n",
+        "                int longest = max(vec.at(i), max(vec.at(j), vec.at(k)));\n",
+        "                int rest = len - longest;\n",
+        "                if (longest < rest) {\n",
+        "                    ans = max(ans, len);\n",
+        "                }\n",
         "            }\n",
         "        }\n",
-        "    }\n",
+        "    } \n",
+        "    cout << ans << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "Mw_tn12T9m5G",
-        "outputId": "2e24fd3f-6275-4103-c74b-2f841d568ea9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Mw_tn12T9m5G",
+        "outputId": "ad4716e6-f324-47db-ef21-b64d73ba00eb"
       },
-      "execution_count": 40,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0111\n",
-            "1111\n",
-            "Yes\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -248,10 +253,35 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!g++ temp.cpp; echo 5 2 3 4 5 10 |./a.out #=> 12 (3,4,5 を選ぶ)\n",
+        "!g++ temp.cpp; echo 4 4 5 10 20 |./a.out #=> 0"
       ],
       "metadata": {
-        "id": "bsv8d2_s9pmF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bsv8d2_s9pmF",
+        "outputId": "1d7d7ef0-5b9a-4404-cc55-fc7c5faa22b8"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 Ants POJ No.1852\n"
+      ],
+      "metadata": {
+        "id": "K5lr6xXCaicr"
       },
       "execution_count": null,
       "outputs": []
