Colaboratory を使用して作成しました

--- a/cpp_aribon.ipynb
+++ b/cpp_aribon.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aribon.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgbcoDG0PzA+ZmnpWrtT2q",
+      "authorship_tag": "ABX9TyMhHrrfMCF5CR+55kFTYr7K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,7 +125,7 @@
         },
         "outputId": "82d0f3cd-7662-48bd-de2e-2e6872d2e325"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
         "id": "21oxtk6R3RHF",
         "outputId": "a5b3aa4f-15b2-4167-fb8b-386507596970"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "id": "PGsHUtRG5zHM",
         "outputId": "8dc9f438-17ed-4556-80e2-a0820a0ddf30"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,15 +191,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "07Tmi0phYCUX"
-      }
     },
     {
       "cell_type": "code",
@@ -239,7 +230,7 @@
         "id": "Mw_tn12T9m5G",
         "outputId": "ad4716e6-f324-47db-ef21-b64d73ba00eb"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +254,7 @@
         "id": "bsv8d2_s9pmF",
         "outputId": "1d7d7ef0-5b9a-4404-cc55-fc7c5faa22b8"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,19 +267,111 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "07Tmi0phYCUX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# 問題 Ants POJ No.1852\n",
+        "# 問題 p.23 Ants POJ No.1852\n",
         "長さ L cm の竿の上をアリが毎秒 1 cm のスピードで歩いている\n",
         "アリが竿の端に到達すると竿の下に落ちる\n",
         "二匹のアリが出会うとそれぞれ反対を向いて戻っていく\n",
         "各アリについて現在の竿の左端からの距離 x は分かるが、どちらの方向を向いているかは分からない\n",
         "すべてのアリが竿から落ちるまでにかかる最小の時間と最大の時間をそれぞれ算出する\n",
         "1 <= L <= 10^6, 1 <= n <= 10^6, 0 <= xi <= L\n",
-        "例 L n x => 10 3 2 6 7 => min = 4 (左、右、右) max = 8 (右、右、右)\n"
+        "例 L n x => 10 3 2 6 7 => min = 4 (左、右、右) max = 8 (右、右、右)"
       ],
       "metadata": {
         "id": "K5lr6xXCaicr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 p.23 Ants POJ No.1852\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    int L, n;\n",
+        "    cin >> L >> n;\n",
+        "    vector<int> vec(n);\n",
+        "    for (int i=0;i < n; i++){\n",
+        "        cin >> vec.at(i);\n",
+        "    }\n",
+        "    \n",
+        "    int mintime=0, maxtime=0;\n",
+        "    int near, far;\n",
+        "\n",
+        "    for (int i = 0; i < n; i++){\n",
+        "        near = min(vec.at(i), L-vec.at(i));\n",
+        "        far = max(vec.at(i), L-vec.at(i));\n",
+        "        mintime = max(mintime, near);\n",
+        "        maxtime = max(maxtime, far);\n",
+        "    }\n",
+        "\n",
+        "    cout << \"min = \" << mintime << endl;\n",
+        "    cout << \"max = \" << maxtime << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "TXA9b0mucBd1",
+        "outputId": "42f74b6c-8883-4ef7-ccd0-b623192a1a87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 10 3 2 6 7 |./a.out #=> 4, 8"
+      ],
+      "metadata": {
+        "id": "HOVFioSFepoy",
+        "outputId": "3ab39d92-9f67-4b4c-8437-eff2c8ceaa47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "min = 4\n",
+            "max = 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "N0StPq_re3Fg"
       },
       "execution_count": null,
       "outputs": []
