--- a/cpp_aribon.ipynb
+++ b/cpp_aribon.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aribon.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOg9bE1gte+TQQ99UMK4di/",
+      "authorship_tag": "ABX9TyOm8CRet2jlpV+QjZeePwSS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -374,8 +374,15 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "bool binary_search (int x) {\n",
-        "    \n",
+        "bool binary_search (int x, int n, vector<int> vec) {\n",
+        "    int l = 0, r = n;\n",
+        "    while (r - l >= 1) {\n",
+        "        int i = (l + r) / 2;\n",
+        "        if (vec.at(i) == x) return true;\n",
+        "        else if (vec.at(i) < x) l = i + 1;\n",
+        "        else r = i;\n",
+        "    }\n",
+        "    return false;\n",
         "}\n",
         "\n",
         "int main () {\n",
@@ -385,14 +392,14 @@
         "    for (int i=0; i < n ; i++) {\n",
         "        cin >> vec.at(i);\n",
         "    }\n",
+        "    sort(vec.begin(), vec.end());\n",
+        "\n",
         "    bool ans = false;\n",
         "    \n",
         "    for (int i=0; i < n ; i++) {\n",
         "        for (int j=0; j < n ; j++) {\n",
         "            for (int k=0; k < n ; k++){\n",
-        "                for (int l=0; l < n ; l++){\n",
-        "                    if (vec.at(i)+vec.at(j)+vec.at(k)+vec.at(l) == m) ans = true;\n",
-        "                }\n",
+        "                if (binary_search(m - vec.at(i) - vec.at(j) - vec.at(k), n, vec)) ans = true;\n",
         "            }\n",
         "        }\n",
         "    }\n",
@@ -401,7 +408,161 @@
         "}"
       ],
       "metadata": {
-        "id": "N0StPq_re3Fg"
+        "id": "N0StPq_re3Fg",
+        "outputId": "1016e316-9733-4e1a-a58d-b3161156b8e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 10 1 3 5 |./a.out #=> Yes 1 1 3 5\n",
+        "!g++ temp.cpp; echo 3 9 1 3 5 |./a.out #=> No \n",
+        "!g++ temp.cpp; echo 3 9 1 3 2 |./a.out #=> Yes 3 3 2 2"
+      ],
+      "metadata": {
+        "id": "ZoK8_DGvCfJY",
+        "outputId": "44bf674c-9cd2-4824-94f1-a668d3341cc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n",
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 p.25 ハードルが上がったくじびき その 2\n",
+        "# binary search その2\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "bool binary_search (int x, int n, vector<int> kk) {\n",
+        "    int l = 0, r = n*n;\n",
+        "    while (r - l >= 1) {\n",
+        "        int i = (l + r) / 2;\n",
+        "        if (kk.at(i) == x) return true;\n",
+        "        else if (kk.at(i) < x) l = i + 1;\n",
+        "        else r = i;\n",
+        "    }\n",
+        "    return false;\n",
+        "}\n",
+        "\n",
+        "int main () {\n",
+        "    int n, m;\n",
+        "    cin >> n >> m;\n",
+        "    vector<int> vec(n);\n",
+        "    for (int i=0; i < n ; i++) {\n",
+        "        cin >> vec.at(i);\n",
+        "    }\n",
+        "    vector<int> kk(n * n);\n",
+        "\n",
+        "    for (int k = 0; k < n; k++){\n",
+        "        for (int l = 0; l < n; l++){\n",
+        "            kk.at(k * n + l) = vec.at(k) + vec.at(l);\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    sort(kk.begin(), kk.end());\n",
+        "\n",
+        "    bool ans = false;\n",
+        "    \n",
+        "    for (int i=0; i < n ; i++) {\n",
+        "        for (int j=0; j < n ; j++) {\n",
+        "            if (binary_search(m - vec.at(i) - vec.at(j), n, kk)) ans = true;\n",
+        "        }\n",
+        "    }\n",
+        "    if (ans) cout << \"Yes\" << endl;\n",
+        "    else cout << \"No\" << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "5qrToL7uDbuH",
+        "outputId": "7d86fe55-4c05-4e4e-ba47-61925008adb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 10 1 3 5 |./a.out #=> Yes 1 1 3 5\n",
+        "!g++ temp.cpp; echo 3 9 1 3 5 |./a.out #=> No \n",
+        "!g++ temp.cpp; echo 3 9 1 3 2 |./a.out #=> Yes 3 3 2 2"
+      ],
+      "metadata": {
+        "id": "MaL71J3gEEHL",
+        "outputId": "5cf4567b-b4ac-40c6-9a43-709748572279",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n",
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "qVeFq2k0GqrH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "yh5gJweFGILt"
       },
       "execution_count": null,
       "outputs": []
