Colaboratory を使用して作成しました

--- a/cpp_aribon.ipynb
+++ b/cpp_aribon.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aribon.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP7fJbRBqRneIWKXSvxWIaC",
+      "authorship_tag": "ABX9TyPUHxN3XoRTLKBGsJLUg8m7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -510,15 +510,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "07Tmi0phYCUX"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "!g++ temp.cpp; echo 3 10 1 3 5 |./a.out #=> Yes 1 1 3 5\n",
@@ -571,7 +562,7 @@
         },
         "outputId": "b3dbe845-40ba-447b-86d0-6e9220d7c52c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +585,7 @@
         },
         "outputId": "6522145d-4433-48e1-c76c-27eb331a5720"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +627,7 @@
         "id": "Fi1035C3KwXN",
         "outputId": "9e740d1b-07c1-442f-cf27-300f9f64eede"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,7 +650,7 @@
         "id": "NAYzTC9NL2mT",
         "outputId": "0ed1a773-ed9c-43e2-e599-ef0e27803e39"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,7 +704,7 @@
         "id": "b33wWOWDMrrg",
         "outputId": "b27bd536-f3a5-493f-fcd6-4cdbb51d4603"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +727,7 @@
         "id": "0l6q1PTiPl04",
         "outputId": "3b57f8c0-c197-4876-ca50-ed05e3ed8ea9"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,7 +770,7 @@
         "id": "kiqRPLhzPpC3",
         "outputId": "1882ba1c-3e26-4534-bff7-33f8ef5a634f"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,7 +793,7 @@
         "id": "NO16EjWaQn7G",
         "outputId": "9624fd13-7031-4371-f69b-1387276eac7b"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,6 +822,7 @@
       "cell_type": "code",
       "source": [
         "# 部分和問題\n",
+        "# 深さ優先探索で解く\n",
         "# 整数 a_1,a_2,...,a_n が与えられます。その中からいくつか選びその和をちょうど k にすることが出来るかを判定する。\n",
         "# 1 <= n <= 20, -10^8 <= a_i <= 10^8, -10^8 <= k <= 10^8\n",
         "# 例 n=4, a={1,2,4,7}, k=13 #=> Yes (13 = 2 + 4 + 7)\n",
@@ -867,7 +859,7 @@
         "id": "SU8mZk16RBGA",
         "outputId": "b05cdaee-eea2-427b-f0c0-c7251f0d62cc"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,6 +869,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "07Tmi0phYCUX"
+      }
     },
     {
       "cell_type": "code",
@@ -891,7 +892,7 @@
         "id": "v3d4Ih6uRBy9",
         "outputId": "123710d5-0a51-4067-b361-cc2d9962d588"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,10 +907,41 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 問題 p.35 Lake Counting POJ No.2386\n",
+        "# 大きさが N x M の庭があります。そこに雨が降り、水溜りができました。\n",
+        "# 水溜りは 8 近傍で隣接している場合につながっていると見做します。\n",
+        "# 全部でいくつの水溜りがあるでしょうか。\n",
+        "# 8 近傍とは次の W に対する * の部分を指す。\n",
+        "# ***\n",
+        "# *W*\n",
+        "# ***\n",
+        "# 制約 N, M <= 100\n",
+        "# 例 N=10, M=12\n",
+        "# W........WW.\n",
+        "# .WWW.....WWW\n",
+        "# ....WW...WW.\n",
+        "# .........WW.\n",
+        "# .........W..\n",
+        "# ..W......W..\n",
+        "# .W.W.....WW.\n",
+        "# W.W.W.....W.\n",
+        "# .W.W......W.\n",
+        "# ..W.......W.\n",
+        "#=> 3"
       ],
       "metadata": {
         "id": "B7q5tC7EjsmX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "4NdQfBZ4ZJzt"
       },
       "execution_count": null,
       "outputs": []
