Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJU1WZlbOlkCegFWyJEVeL",
+      "authorship_tag": "ABX9TyN7irfRRADSP78m8Fcdu46j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,85 @@
       "metadata": {
         "id": "KBSwAUuU4s_Y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# stringstream\n",
+        "# 単語に分解する\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "void split(const string &s, char delim, vector<string> &elems) {\n",
+        "    stringstream ss(s);\n",
+        "    string item;\n",
+        "    while (getline(ss, item, delim)) {\n",
+        "        elems.push_back(item);\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "vector<string> split(const string &s, char delim) {\n",
+        "    vector<string> elems;\n",
+        "    split(s, delim, elems);\n",
+        "    return elems;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  string str1 = \"Now I need a drin.\";\n",
+        "  string str2 = \n",
+        "  \"this\"\n",
+        "  \"is a\"\n",
+        "  \"pen\";\n",
+        "  string str3;\n",
+        "  str3 = regex_replace(str1, regex(\"[ .,]+\"), \" \");\n",
+        "  vector<string> words = split(str2, ' ');\n",
+        "  for (auto& item : words){\n",
+        "      cout << item << \" \";\n",
+        "  }\n",
+        "  cout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "rI6OtbnWrk5N",
+        "outputId": "7dc7a9dc-ffeb-4ddf-d963-cfb28b885460",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "xN-bjdaTrkxZ",
+        "outputId": "089e546f-95b7-4723-9ebf-b9d95b1c8f51",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "thisis apen \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -72,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
